--- a/hw3.tex
+++ b/hw3.tex
@@ -7,13 +7,13 @@
 \pagestyle{headandfoot}
 \runningheadrule
 \runningfootrule
-\runningheader{CS 212, Fall 2023}{HW 3: Turing Machines, Variants, Decidability, and Recognizability}{Fall 2023}
+\runningheader{CS 212, Fall 2023}{HW 3: Turing Machine, Variants, Decidability, and Recognizability}{Fall 2023}
 \runningfooter{}{Page \thepage\ of \numpages}{}
 \firstpageheader{}{}{}
 
 \boxedpoints
 
-\title{Homework 3: Turing Machines, Variants, Decidability, and Recognizability}
+\title{Homework 3: Turing Machine, Variants, Decidability, and Recognizability}
 \author{CS 212 Nature of Computation\\Habib University}
 \date{Fall 2023}
 
