added missing product in codomain

--- a/hw3.tex
+++ b/hw3.tex
@@ -63,7 +63,7 @@ Consider the Turing machine, $M$, that computes $f$ given a $\#$-separated pair 
 
     An Euclidean-Space Turing Machine can be formally represented as the usual 7-tuple, $(Q, \Sigma, \Gamma, \delta, q_{start}, q_{accept}, q_{reject})$, of an ordinary Turing machine.
 
-    The only exception is $\delta$ which is now defined as $\delta: Q\times\Gamma\to Q \times \{L,R,U,D,F,B\}$, as the head can move Left, Right, Up, Down, Forward, or Back in a single movement.
+    The only exception is $\delta$ which is now defined as $\delta: Q\times\Gamma\to Q\times\Gamma \times \{L,R,U,D,F,B\}$, as the head can move Left, Right, Up, Down, Forward, or Back in a single movement.
 
     \centerline {\rule{350pt}{.25pt}}
     
